[package]
name = "cloudconvert"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Client library for CloudConvert"
homepage = "https://github.com/MeVitae/cloudconvert-rs"
repository = "https://github.com/MeVitae/cloudconvert-rs"
keywords = ["cloudconvert", "convert", "client", "api", "pdf"]
categories = ["api-bindings", "web-programming", "asynchronous"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "0.14", features = ["http1", "http2", "client", "runtime", "tcp"] }
hyper-tls = "0.5"
tokio = "1"
hapic = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies.tokio]
version = "1"
features = [ "rt", "macros" ]
